--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -26,7 +26,9 @@ ru:
     buy: 'Купить'
     full_name: 'ФИО'
     save: 'Сохранить'
-    number: 'Номер'
+    user: 'Пользователь'
+    passport: 'Паспорт'
+    passport_number: 'Номер паспорта'
   admin:
     carriages:
       index:
@@ -98,6 +100,12 @@ ru:
         edit: 'Изменить'
       time:
         edit: 'Изменить'
+    tickets:
+      index:
+        new_ticket: 'Новый билет'
+      form:
+        start_station: 'Начальная станция'
+        end_station: 'Конечная станция'
   searches:
     show:
       arrive_time: 'Время прибытия'
@@ -109,3 +117,6 @@ ru:
       full_name: 'ФИО'
     show:
       ticket_buy: 'Билет купил'
+    form:
+      start_station: 'Начальная станция'
+      end_station: 'Конечная станция'
