--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -29,6 +29,8 @@ ru:
     user: 'Пользователь'
     passport: 'Паспорт'
     passport_number: 'Номер паспорта'
+    hi: 'Привет'
+    here: 'Здесь'
   admin:
     carriages:
       index:
@@ -125,3 +127,9 @@ ru:
       subject: 'Вы купили билет'
     delete_ticket:
       subject: 'Вы отказались от покупки билета'
+      reject: 'Вы отменили покупку билета по маршруту:'
+      show_tickets: 'Посмотреть все свои билеты вы можете'
+    buy_ticket:
+      buy: 'Вы купили билет по маршруту:'
+      show_ticket: Посмотреть билет вы можете
+      show_tickets: Посмотреть все свои билеты вы можете
